Agrego modificaciones en las vistas

--- a/TP8_MVC/Views/Presupuestos/Edit.cshtml
+++ b/TP8_MVC/Views/Presupuestos/Edit.cshtml
@@ -1,4 +1,4 @@
-@model TP8_MVC.Models.Presupuesto
+@model TP8_MVC.ViewModels.PresupuestoViewModel
 
 @{
     ViewData["Title"] = "Editar Presupuesto";
