--- a/TP8_MVC/Views/Productos/Edit.cshtml
+++ b/TP8_MVC/Views/Productos/Edit.cshtml
@@ -1,4 +1,4 @@
-@model TP8_MVC.Models.Producto
+@model TP8_MVC.ViewModels.ProductoViewModel
 
 @{
     ViewData["Title"] = "Editar Producto";
@@ -18,12 +18,6 @@
                 <label asp-for="Descripcion" class="control-label"></label>
                 <input asp-for="Descripcion" class="form-control" />
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
-            </div>
-            
-            <div class="form-group mb-3">
-                <label asp-for="Cantidad" class="control-label"></label>
-                <input asp-for="Cantidad" class="form-control" type="number" />
-                <span asp-validation-for="Cantidad" class="text-danger"></span>
             </div>
             
             <div class="form-group mb-3">
